--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>Сергей Левашев</title>
 		<meta charset = "utf-8">
 		<link href = "style.css" rel="stylesheet">
+		<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+		<script type="text/javascript" src="js/script.js"></script>
 	</head>
 	<body>
 		<header class = "header_page">
@@ -11,33 +13,67 @@
 				<p class = "main_title">Сергей Левашев</p>
 			</div>
 		</header>
-		<nav class = "menu_page">
-			<a href = "/"><p>Биография</p></a>
-			<a href = "/"><p>Навыки</p></a>
-			<a href = "/"><p>Разработка</p></a>
-			<a href = "/"><p>Контакты</p></a>
+		<nav class = "menu_page" id = "nav">
+			<a href = "#byography"><p>Биография</p></a>
+			<a href = "#learning"><p>Навыки</p></a>
+			<a href = "#projects"><p>Разработка</p></a>
+			<a href = "#contacts"><p>Контакты</p></a>
 		</nav>
-		<section>
+		<section id = "byography">
 			<div class = "photo"></div>
 			<div class = "byography"> 
-				<p class="byography_title">Биография</p>
-				<p class="byography_description">
+				<p class = "byography_title">Биография</p>
+				<p class = "byography_description">
 					Окончил ИТА ЮФУ в 2015г. по специальности: "прикладная математика и информатика". Диплом с отличием. 
+				</p>
+				<p class = "byography_title">Сейчас</p>
+				<p class = "byography_description">
+					В настоящее время обучаюсь в ИТА ЮФУ в аспирантуре по специальности "Информатика и вычислительная техника", кафедра Высшей Математики. Занимаюсь подготовкой кандидатской диссертации.
 				</p>
 			</div>
 		</section>
-		<section>
-			<div class = "learning_last">
-				<p class = "learning_last_title"></p>
+		<section id = "learning">
+			<div class = "learning">
+				<p class = "learning_title"> Курсы </p>
+				<ul class = "learning_description">
+					<li> HTML и CSS на <a href = "https://htmlacademy.ru/" target="_blank">HTML Academy</a> </li>
+					<li> JS на <a href="https://www.codecademy.com/learn/introduction-to-javascript" target="_blank">Code Academy</a> </li>
+					<li> Git на <a href = "https://try.github.io/levels/1/challenges/1" target="_blank">Try Git</a> </li>
+					<li> React на <a href = "https://facebook.github.io/react/" target="_blank">React Facebook</a> </li>
+					<li> <a href = "https://ru.bem.info/" target = "_blank">БЭМ</a> </li>
+				</ul>
 			</div>
-			<div class = "learning_current"></div>
+			<div class = "other">
+				<p class = "other_title">Навыки</p>
+				<ul class = "other_description"> 
+					<li>Windows, LINUX</li>
+					<li>MS sOffice, TEX</li>
+					<li>Python, C++</li>
+					<li>HTML, CSS, JS, jQuery</li>
+					<li>Git, Webstorm, React</li>
+					<li>Photoshop, Illustrator</li>
+				</ul>
+			</div>
+			<div class = "english">
+				<p class = "english_title">Английский</p>
+				<p class = "english_description">Имеется опыт зарубежных поездок и общения с носителями языка. Свободное чтение и перевод документации.</p>
+			</div>
 		</section>
-		<section>
-			<div class = "skills"></div>
-			<div class = "projects"></div>
-			<div class = "english"></div>
+		<section class = "projects" id = "projects">
+			<div class = "project_1">
+				<p class = "project_title">О планетах солнечной системы</p>
+			</div>
+			<div class = "project_2">
+				<p class = "project_title">Apple store</p>
+			</div>
+			<div class = "project_3">
+				<p class = "project_title">Онлайн-тест</p>
+			</div>
+			<div class = "project_4">
+				<p class = "project_title">Компонентная React-верстка по макету</p>
+			</div>
 		</section>
-		<footer>
+		<footer id = "contacts">
 		</footer>
 	<body>
 </html>
