--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang = "ru">
 	<head>
 		<title>Сергей Левашев</title>
 		<meta charset = "utf-8">
 		<link href = "style.css" rel="stylesheet">
-		<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-		<script type="text/javascript" src="js/script.js"></script>
+		<script type = "text/javascript" src = "js/jquery-1.11.1.min.js"></script>
+		<script type = "text/javascript" src = "js/script.js"></script>
 	</head>
 	<body>
 		<header class = "header_page">
