--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 			</div>
 		</header>
 		<nav class = "menu" id = "nav">
-			<a href = "#byography"><p>Биография</p></a>
-			<a href = "#learning"><p>Навыки</p></a>
-			<a href = "#projects"><p>Разработка</p></a>
-			<a href = "#contacts"><p>Контакты</p></a>
+			<a href = "#byography"><p>БИОГРАФИЯ</p></a>
+			<a href = "#learning"><p>НАВЫКИ</p></a>
+			<a href = "#projects"><p>ПРОЕКТЫ</p></a>
+			<a href = "#contacts"><p>КОНТАКТЫ</p></a>
 		</nav>
-		<section class = "byography" id = "byography">
+		<p class = "section-title" id = "byography">Биография</p>
+		<section class = "byography">
 			<img class = "byography__photo" src = "pic/I_am.jpg" />
 			<div class = "byography__block"> 
 				<p class = "byography__title">Биография</p>
@@ -32,7 +33,9 @@
 				</p>
 			</div>
 		</section>
-		<section class = "learning" id = "learning">
+		<hr class = "section-line">
+		<p class = "section-title" id = "learning">Навыки</p>
+		<section class = "learning">
 			<div class = "learning__courses">
 				<p class = "learning__title"> Курсы </p>
 				<ul class = "learning__description">
@@ -106,23 +109,28 @@
 					</tr>
 				</table>
 			</div>
-			
 		</section>
-		<section class = "projects" id = "projects">
+		<hr class = "section-line">
+		<p class = "section-title" id = "projects">Проекты</p>
+		<section class = "projects">
 			<div class = "projects__project">
 				<p class = "projects__title">О планетах солнечной системы</p>
+				<img class = "project-1" src = "pic/prj_1.png"></img>
 			</div>
 			<div class = "projects__project">
 				<p class = "projects__title">Apple store</p>
+				<img class = "project-2" src = "pic/prj_2.png"></img>
 			</div>
 			<div class = "projects__project">
 				<p class = "projects__title">Онлайн-тест</p>
+				<img class = "project-3" src = "pic/prj_3.png"></img>
 			</div>
 			<div class = "projects__project">
 				<p class = "projects__title">Компонентная React-верстка по макету</p>
+				<img class = "project-4" src = "pic/prj_4.png"></img>
 			</div>
 		</section>
-		<footer id = "contacts" class = "footer">
+		<footer class = "footer" id = "contacts" >
 			<table>
 				<tr>
 					<td rowspan="2">Левашев Сергей</td>
