--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>Сергей Левашев</title>
 		<meta charset = "utf-8">
-		<link href = "style.css" rel="stylesheet">
 		<link href = "normalize.css" rel="stylesheet">
+		<link href = "style.css" rel="stylesheet">
 		<link rel="shortcut icon" href="pic/favicon.ico" type="image/x-icon">
 		<script type = "text/javascript" src = "js/jquery-1.11.1.min.js"></script>
 		<script type = "text/javascript" src = "js/script.js"></script>
@@ -132,7 +132,7 @@
 				<img class = "project-4" src = "pic/prj_4.png"></img>
 			</div>
 		</section>
-		<footer class = "footer" id = "footer">
+		<footer class = "footer" id = "contacts">
 			<table class = "footer__contacts">
 				<tr>
 					<td class = "contact">Левашев Сергей</td>
