--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				<img class = "project-2" src = "pic/prj_2.png"></img>
 			</div>
 			<div class = "projects__project">
-				<p class = "projects__title">Онлайн-тест</p>
+				<p class = "projects__title">Тест на общие знания</p>
 				<img class = "project-3" src = "pic/prj_3.png"></img>
 			</div>
 			<div class = "projects__project">
