--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 		<footer class = "footer" id = "contacts">
 			<table class = "footer__contacts">
 				<tr>
-					<td class = "contact">Левашев Сергей</td>
+					<td class = "contact">© Левашев Сергей</td>
 					<td class = "contact-1"><img src = "pic/tel.png" width = "44" height = "44"><br>8-928-199-777-8</td>
 					<td class = "contact-2"><a href = "https://vk.com/s_levashev" target = "_blank"><img src = "pic/vk.png" width = "40" height = "40"></a><br>Вконтакте</td>
 					<td class = "contact-3"><a href = "https://www.facebook.com/profile.php?id=100011852223553" target = "_blank"><img src = "pic/fb.png" width = "40" height = "40"></a><br>facebook</td>
